panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__equality-ops__test_int_unequal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/equality-ops/test_int_unequal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/equality-ops/test_int_unequal.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 27)
         (return (equal (name a~2 `int`) 42)))))

----- stderr -----
